code trai timm cho tuyet

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <div class="sp-container">
       <div class="sp-content">
         <div class="sp-globe"></div>
-        <h2 class="frame-1">Ngoc Tuyet</h2>
+        <h2 class="frame-1">Ngọc Tuyết</h2>
         <h2 class="frame-2">My darling</h2>
-        <h2 class="frame-3">I wanna say</h2>
-        <h2 class="frame-4">I love you so much</h2>
+        <h2 class="frame-3">I wanna</h2>
+        <h2 class="frame-4">Hug You and Kiss You</h2>
         <h2 class="frame-5">
-          <span>Hug</span>
-          <span>and</span>
-          <span>Kiss You</span>
+          <span>I</span>
+          <span>love </span>
+          <span>You</span>
         </h2>
       </div>
     </div>
@@ -28,6 +28,7 @@
     <canvas id="pinkboard">
       <canvas id="pinkboard"> </canvas>
     </canvas>
+    <audio src="5vyn9jkz07.mp3" controls autoplay></audio>
     <script>
       /*
        * Settings
@@ -37,7 +38,7 @@
           length: 2200, // maximum amount of particles
           duration: 2, // particle duration in sec
           velocity: 120, // particle velocity in pixels/sec
-          effect: -1.2, // play with this for a nice effect
+          effect: -1.4, // play with this for a nice effect
           size: 14, // particle size in pixels
         },
       };
